# MFi-MUSE

./: README.rst  pylintrc
mfix-18.1.5/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  MANIFEST.in  setup.py
mfix-18.1.5/build-aux/: environment-osx64.yml  joule-spec.txt  runtests.sh  rxn_preproc.py
mfix-18.1.5/build-aux/cmake/: PyMFIX.cmake
mfix-18.1.5/build-aux/conda/boost-mingw/: bld.bat  meta.yaml
mfix-18.1.5/build-aux/conda/mfix-crowsolver/: meta.yaml
mfix-18.1.5/build-aux/conda/mfix-gui/: build.sh  meta.yaml
mfix-18.1.5/build-aux/conda/mfix-solver/: bld.bat
mfix-18.1.5/build-aux/conda/mfix-src/: meta.yaml
mfix-18.1.5/doc/developer/: keyword_coverage.py
mfix-18.1.5/doc/srs/external_interface_requirements/: boundary_conditions.rst  continuum_solids.rst  fluid_phase.rst  initial_conditions.rst  job.rst  model.rst  navigation_pane.rst  numerics.rst  output.rst  point_source.rst  scalars.rst
mfix-18.1.5/doc/user_manual/developers/: index.rst
mfix-18.1.5/doc/user_manual/getting_started/: index.rst  postprocessing.rst
mfix-18.1.5/doc/user_manual/howto/: custom_solver.rst
mfix-18.1.5/doc/user_manual/reference/: batch_queue_environment.rst  cartesian_grid.rst  faq.rst  geometry_and_discretization.rst  internal_surface.rst  keywords.rst  numerical_parameters.rst  output_control.rst  queue.rst  udf_control.rst  user_interface_reference.rst
mfix-18.1.5/doc/user_manual/tutorials/: index.rst  tutorial_hopper.rst
mfix-18.1.5/legacy_tests/: CMakeLists.txt
mfix-18.1.5/legacy_tests/dem-tests/contact-conduction/: usr2_des.f
mfix-18.1.5/legacy_tests/dem-tests/dmp_tests/: CMakeLists.txt
mfix-18.1.5/legacy_tests/dem-tests/evaporation/: usr2_des.f
mfix-18.1.5/legacy_tests/dem-tests/homogeneous-cooling-system/: usr0_des.f
mfix-18.1.5/legacy_tutorials/Cartesian_grid_tutorials/: CMakeLists.txt
mfix-18.1.5/legacy_tutorials/DEM_Wall_HT/: runtests.sh  usr_mod.f
mfix-18.1.5/legacy_tutorials/QMOM_TUTORIALS/: CMakeLists.txt
mfix-18.1.5/legacy_tutorials/Solvent_Absorption/: usr_drag.f  usr_init_namelist.f  usrnlst.inc
mfix-18.1.5/legacy_tutorials/reactor1b/: rrates.f
mfix-18.1.5/mfixgui/: graphic_tabs.py  interpreter.py  model_setup.py  run.sh  solids_handler.py
mfix-18.1.5/mfixgui/file_menu/: about_widget.py  help_widget.py  open_widget.py
mfix-18.1.5/mfixgui/tests/: test_bcs.py  test_ics.py  test_job.py  test_solids_dem.py  test_solids_tfm.py
mfix-18.1.5/mfixgui/tools/: collect_tutorial_info.py  qt.py  template_data.json  thumbnail.py  util.py
mfix-18.1.5/mfixgui/uifiles/: build_popup.ui  chemistry.ui  fluid.ui  hopper.ui  internal_surfaces.ui  model_setup.ui  new.ui  solids.ui
mfix-18.1.5/mfixgui/widgets/: help_dialog.py  nodeworks.py  reactor_popup.py  regions.py  regions_popup.py  resource_monitor.py  run_popup.py
mfix-18.1.5/model/: adjust_theta.f  bc_theta.f  calc_mu_s.f  calc_p_star.f  coeff_mod.f  conv_dif_u_s.f  conv_dif_v_g.f  conv_dif_w_s.f  corner.f  drag_gs.f  drag_ss.f  exit.f  flow_to_vel.f  kintheory_mod.f  leq_bicgs.f  machine_mod.f  parse_mod.f  parse_rxn.f  read_database.f  rxn_com_mod.f  set_flags.f  set_geometry.f  set_icbc_flags.f  set_increments.f  set_outflow.f  set_param.f  set_ro_g.f  solve_energy_eq.f  solve_granular_energy.f  solve_pp_g.f  solve_species_eq.f  solve_vel_star.f  time_cpu_mod.f  time_step.f  usr_mod.f  usr_properties.f  xerbla.f  zero_norm_vel.f
mfix-18.1.5/model/cartesian_grid/: cut_cell_preprocessing.f  get_connectivity.f  get_cut_cell_volume_area.f  get_stl_data.f  vtk_out.f
mfix-18.1.5/model/check_data/: check_bc_inflow.f  check_ic_common_discrete.f  check_ic_mppic.f  check_solids_dem.f  check_solids_mppic.f
mfix-18.1.5/model/des/: #des_time_march_barboteu_2D_chute_rebond_confinement_31-03.f#  #discretelement_mod.f#  .#generate_particles_mod.f  calc_collision_wall_mod.f  calc_epg_des.f  calc_grad_des.f  calc_rrates_des.f  check_cell_movement.f  des_allocate_mod.f  des_allocate_mod_3D_serge.f  des_time_march.f  des_time_march_barboteu_2D_chute_rebond_confinement_27-03.f  des_time_march_barboteu_2D_general.f  des_time_march_serge_2D_frottement_particule_gliss_avant_confinement.f  des_time_march_serge_3D_frottement_confinement.f  desgrid_mod.f  discretelement_mod_3D_serge.f  generate_particles_mod.f  make_arrays_des.f  mass_inflow_dem.f  mass_outflow_dem.f  mpi_comm_des_mod.f  read_res1_des_mod.f  set_phase_index.f
mfix-18.1.5/model/dmp_modules/: sendrecv_mod.f
mfix-18.1.5/model/include/: crowmfix.inc  numerical_params.inc  output_control.inc  run_control.inc
mfix-18.1.5/model/monitors/: functions.f90  volume_average.f90
mfix-18.1.5/model/qmomk/: qmomk_make_arrays.f
mfix-18.1.5/post_mfix/: files_post.lis
mfix-18.1.5/queue_templates/: joule
mfix-18.1.5/tests/mms/: CMakeLists.txt
mfix-18.1.5/tools/DES_Particle_Generator/: DESParticleGen.f
mfix-18.1.5/tools/MFIX_Grid_Generator/: spouted_bed_grid_2daxi.f
mfix-18.1.5/tutorials/Hopper/: geometry.stl
mfix-18.1.5/tutorials_soufiane/100_part_CL-carre_parallel/: test_100part_CL_bocal_12proc.sty  test_100part_CL_carre_1proc.sty
mfix-18.1.5/tutorials_soufiane/100_part_CL-carre_parallel_EULER/: fort.120  fort.130  fort.140  job.slurm  sequential_100_part.1328757.out  sequential_100_part.1328783.out  test_100part_CL_carre_1proc.sty  test_100part_CL_carre_2proc.sty  test_100part_CL_carre_4proc.sty  test_900part_CL_carre_36_SERGEproc.sty
mfix-18.1.5/tutorials_soufiane/25_part_random_vel/: kinetic_frame.sty
mfix-18.1.5/tutorials_soufiane/5_stacked_particles/: fort.11
mfix-18.1.5/tutorials_soufiane/comparaison_serge/: jdd_template.py
mfix-18.1.5/tutorials_soufiane/dam_break/: fort.22  test-case.sty
mfix-18.1.5/tutorials_soufiane/freely_falling_particle/: fort.120  fort.130
mfix-18.1.5/tutorials_soufiane/freely_falling_particle_EULER/: fort.11  fort.130  fort.140  kinetic_euler.sty  pos_euler.sty  test-chute.sty  vel_euler.sty
mfix-18.1.5/tutorials_soufiane/particle_sliding/: fort.10  fort.11  fort.50  fort.51  particle_sliding.sty
model/crow/: CMakeLists.txt  crowmfix.cpp  crowmfix.h  crowmfix_server.cpp  crowmfix_wrapper.f
(+474 files in other folders)
